Table User {
  id        Int     [pk, increment]
  username  String
  playlists Playlist[]
}

Table Playlist {
  id            Int     [pk, increment]
  name          String
  description   String
  owner         User
  tracks        Track[]
}

Table Track {
  id        Int [pk, increment]
  name      String
  playlists Playlist[]
}

Ref: User.playlists < Playlist.owner
//1 User has manny playlists
// the connecting fiels are playlis
// < mouthnopens toward the "many"

Ref: Playlist.tracks <> Track.playlists
// <> many to many
